[tool.poetry]
name = "asyncache"
version = "0.1.1"
description = "Helpers to use cachetools with async code."
authors = ["hephex <figus.federico@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
cachetools = ">=2.1"
mypy = "^0.982"
types-cachetools = "^5.2.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.1.3"
isort = "^5.10.1"
pylint = "^2.15.3"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
